Several bug-fixes. Overlapping links on about page. UpperLevelLink showing prematurely. Title prop has been added to image slider.

--- a/components/SectionSlider/components/Controls/Arrows/styles.module.scss
+++ b/components/SectionSlider/components/Controls/Arrows/styles.module.scss
@@ -51,7 +51,7 @@
     padding-right: 4.5rem;
   }
 
-  @media (max-width: $laptop) {
+  @media (max-width: $laptop-s) {
     .text {
       display: none;
     }
@@ -176,7 +176,7 @@
     padding-left: 4.5rem;
   }
 
-  @media (max-width: $laptop) {
+  @media (max-width: $laptop-s) {
     .text {
       display: none;
     }
