--- a/styles/miscellaneous/variables.scss
+++ b/styles/miscellaneous/variables.scss
@@ -47,6 +47,7 @@ $interactive-element-inactive-background: #737373;
 
 $laptop-xl: 1600px;
 $laptop-l: 1440px;
+$laptop-s: 1240px;
 $laptop: 1024px;
 $tablet: 768px;
 $tablet-s: 600px;
